<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragments.GameFragment">

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/tableLayout2">

        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/btn1String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn1"/>
            <Button
                    android:text="@string/btn2String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn2"/>
            <Button
                    android:text="@string/btn3String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn3"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/btn4String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn4"/>
            <Button
                    android:text="@string/btn5String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn5"/>
            <Button
                    android:text="@string/btn6String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn6"/>
        </TableRow>
        <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
            <Button
                    android:text="@string/btn7String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn7"/>
            <Button
                    android:text="@string/btn8String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn8"/>
            <Button
                    android:text="@string/btn9String"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn9"/>
        </TableRow>
    </TableLayout>
    <TextView
            android:text="@string/headlineString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headline" android:textSize="30sp"
            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2"/>
    <TextView
            android:text="@string/winnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/winnerText" android:textSize="30sp"
            android:textStyle="bold" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tableLayout2"/>
    <Button
            android:text="Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnReset" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/winnerText"/>
</android.support.constraint.ConstraintLayout>